; ModuleID = '/home/carl/AnghaBench/phpredis/extr_library.c_redis_read_variant_bulk.c'
source_filename = "/home/carl/AnghaBench/phpredis/extr_library.c_redis_read_variant_bulk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @redis_read_variant_bulk(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i8* @redis_sock_read_bulk_reply(i32* %9, i32 %10)
  store i8* %11, i8** %8, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @ZVAL_FALSE(i32* %15)
  store i32 -1, i32* %4, align 4
  br label %24

17:                                               ; preds = %3
  %18 = load i32*, i32** %7, align 8
  %19 = load i8*, i8** %8, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @ZVAL_STRINGL(i32* %18, i8* %19, i32 %20)
  %22 = load i8*, i8** %8, align 8
  %23 = call i32 @efree(i8* %22)
  store i32 0, i32* %4, align 4
  br label %24

24:                                               ; preds = %17, %14
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i8* @redis_sock_read_bulk_reply(i32*, i32) #1

declare dso_local i32 @ZVAL_FALSE(i32*) #1

declare dso_local i32 @ZVAL_STRINGL(i32*, i8*, i32) #1

declare dso_local i32 @efree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
